Go to index.html instead of misfist-index.html

--- a/misfits-contact.html
+++ b/misfits-contact.html
@@ -19,7 +19,7 @@
             <!-- <h1>Misfits RC</h1>
             <h2>Drag Club</h2> -->
             <div class="logo">
-                <a href="misfits-index.html">
+                <a href="index.html">
                <img
                 src="https://i.ibb.co/sWTZnRs/damion-l.png" border="0"  alt="Misfits logo" width="125px">
                 </a>
@@ -27,7 +27,7 @@
         
             <div class="nav">
                 <ul>
-                  <li><a href="misfits-index.html">HOME</a></li>
+                  <li><a href="index.html">HOME</a></li>
                   <li><a href="misfits-schedule.html">SCHEDULE</a></li>
                   <li><a href="misfits-about.html">ABOUT</a></li> 
                   <li><a href="misfits-contact.html">CONTACT</a></li>
