--- a/misfits-shop.html
+++ b/misfits-shop.html
@@ -16,7 +16,7 @@
     <!-- class header contains the logo and nav bar -->
     <div class="header">            
         <div class="logo">
-            <a href="misfits-index.html">
+            <a href="index.html">
            <img
             src="https://i.ibb.co/sWTZnRs/damion-l.png" border="0"  alt="Misfits logo" width="125px">
             </a>
@@ -24,7 +24,7 @@
     
         <div class="nav">
             <ul>
-              <li><a href="misfits-index.html">HOME</a></li>
+              <li><a href="index.html">HOME</a></li>
               <li><a href="misfits-schedule.html">SCHEDULE</a></li>
               <li><a href="misfits-about.html">ABOUT</a></li> 
               <li><a href="misfits-contact.html">CONTACT</a></li>
